--- a/software/avr/atmega328p/CMakeLists.txt
+++ b/software/avr/atmega328p/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(atmega328p.cmake)
-set(MICROCONTROLEURS compteur asservissement codeuse formation-ex1 formation-ex2 formation-ex3 formation-ex4 formation-interruptions print_serial)
+set(MICROCONTROLEURS compteur asservissement codeuse formation-ex1 formation-ex1-bis formation-ex2 formation-ex3 formation-ex4 formation-interruptions print_serial formation-ex2-bis)
 add_microcontrolers(m328p "${MICROCONTROLEURS}")
