--- a/software/avr/atmega324p/CMakeLists.txt
+++ b/software/avr/atmega324p/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(atmega324p.cmake)
-set(MICROCONTROLEURS )
+set(MICROCONTROLEURS Proto-pince ramassageFruits )
 add_microcontrolers(m324pa "${MICROCONTROLEURS}")
