--- a/software/avr/atmega1280/CMakeLists.txt
+++ b/software/avr/atmega1280/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(atmega1280.cmake)
-set(MICROCONTROLEURS SM_Ax12 Reanim)
+set(MICROCONTROLEURS SM_Ax12 Reanim ramassageFruits1280)
 add_microcontrolers(m1280 "${MICROCONTROLEURS}")
