--- a/software/avr/atmega324p/CMakeLists.txt
+++ b/software/avr/atmega324p/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(atmega324p.cmake)
-set(MICROCONTROLEURS Proto-pince ramassageFruits IDfinder IDchanger Testlevage Total laser)
+set(MICROCONTROLEURS Proto-pince ramassageFruits IDfinder IDchanger Testlevage Total laser ModifsAX12324)
 add_microcontrolers(m324pa "${MICROCONTROLEURS}")
