ScriptTorche va être prêt à tester :)

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,77 @@ hardware/*/*.s\#*
 *.class
 */*.class
 /nbproject/private//software/avr/atmega324p/Total/include/#tot.hpp#
+/.metadata/.lock
+/.metadata/.log
+/.metadata/.plugins/org.eclipse.core.resources/.history/f3/d037404339bf00131a6ab8906276b3ca
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/af/history.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/properties.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.markers.snap"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/org.eclipse.egit.core/GitProjectData.properties"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.syncinfo.snap"
+/.metadata/.plugins/org.eclipse.core.resources/.root/5.tree
+/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/history.version
+/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.version
+/.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
+/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+/.metadata/.plugins/org.eclipse.core.resources/.snap
+/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+/.metadata/.plugins/org.eclipse.egit.ui/dialog_settings.xml
+/.metadata/.plugins/org.eclipse.jdt.core/1225813827.index
+/.metadata/.plugins/org.eclipse.jdt.core/1279675953.index
+/.metadata/.plugins/org.eclipse.jdt.core/1453598739.index
+/.metadata/.plugins/org.eclipse.jdt.core/1529428270.index
+/.metadata/.plugins/org.eclipse.jdt.core/2031085872.index
+/.metadata/.plugins/org.eclipse.jdt.core/2064907913.index
+/.metadata/.plugins/org.eclipse.jdt.core/207581026.index
+/.metadata/.plugins/org.eclipse.jdt.core/2913048097.index
+/.metadata/.plugins/org.eclipse.jdt.core/3305932411.index
+/.metadata/.plugins/org.eclipse.jdt.core/3586026056.index
+/.metadata/.plugins/org.eclipse.jdt.core/3693448964.index
+/.metadata/.plugins/org.eclipse.jdt.core/4201408329.index
+/.metadata/.plugins/org.eclipse.jdt.core/726145421.index
+/.metadata/.plugins/org.eclipse.jdt.core/954478507.index
+/.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
+/.metadata/.plugins/org.eclipse.jdt.core/invalidArchivesCache
+/.metadata/.plugins/org.eclipse.jdt.core/javaLikeNames.txt
+/.metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
+/.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
+/.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+/.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
+/.metadata/.plugins/org.eclipse.jdt.launching/libraryInfos.xml
+/.metadata/.plugins/org.eclipse.jdt.ui/dialog_settings.xml
+/.metadata/.plugins/org.eclipse.jdt.ui/OpenTypeHistory.xml
+/.metadata/.plugins/org.eclipse.jdt.ui/QualifiedTypeNameHistory.xml
+/.metadata/.plugins/org.eclipse.ui.ide/dialog_settings.xml
+/.metadata/.plugins/org.eclipse.ui.workbench/dialog_settings.xml
+/.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
+/.metadata/version.ini
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/af/history.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/properties.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.markers.snap"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/org.eclipse.egit.core/GitProjectData.properties"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.syncinfo.snap"
+/.metadata/.plugins/org.eclipse.core.resources/.history/3d/d0a5f0e03bbf00131a6ab8906276b3ca
+/.metadata/.plugins/org.eclipse.core.resources/.history/73/4010d97d3bbf00131a6ab8906276b3ca
+/.metadata/.plugins/org.eclipse.core.resources/.history/73/b03ffe083cbf00131a6ab8906276b3ca
+/.metadata/.plugins/org.eclipse.core.resources/.history/a3/e0625c4e3bbf00131a6ab8906276b3ca
+/.metadata/.plugins/org.eclipse.core.resources/.history/ac/904533ef3abf00131a6ab8906276b3ca
+/.metadata/.plugins/org.eclipse.core.resources/.history/cb/2020aa213bbf00131a6ab8906276b3ca
+/.metadata/.plugins/org.eclipse.core.resources/.history/f8/704ec69a3bbf00131a6ab8906276b3ca
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/af/history.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/e5/21/history.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/e5/6a/32/history.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/e5/8/history.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.indexes/properties.index"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.markers.snap"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/org.eclipse.egit.core/GitProjectData.properties"
+/".metadata/.plugins/org.eclipse.core.resources/.projects/l'aint\303\250che/.syncinfo.snap"
+/.metadata/.plugins/org.eclipse.jdt.core/1017867974.index
+/.metadata/.plugins/org.eclipse.jdt.core/716332030.index
+/.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/0.png
+/.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/1.png
+/.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/2.png
+/.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/3.png
+/.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/4.png
+/.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/5.png
